<!--
  ~ MIT License
  ~
  ~ Copyright (c)  2021 Damjan Miloshevski
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
  <string name="title_activity_login" translatable="false">LoginActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label" translatable="false">First Fragment</string>
  <string name="second_fragment_label" translatable="false">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
  <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_main" translatable="false">MainActivity</string>
  <string name="email_blank_msg">Email cannot be blank!</string>
  <string name="pwd_blank_msg">Password cannot be blank!</string>
  <string name="invalid_email_format_msg">Invalid email format!</string>
  <string name="login_error_msg">Password cannot be blank/Password may be incorrect!</string>
  <string name="save_credentials_title_msg">Save credentials?</string>
  <string name="save_credentials_msg">Do you want to save your credentials for future use?\n\nYour credentials are encrypted and known only to you</string>
  <string name="dont_save_option">Don\'t save</string>
  <string name="title_activity_admin" translatable="false">AdminActivity</string>
  <string name="tab_text_1">Older</string>
  <string name="tab_text_2">Upcoming</string>
  <string name="title_activity_login2" translatable="false">LoginActivity2</string>
  <string name="signing_in_msg">Signing in. Please wait!</string>
  <string name="title_activity_betting_tip" translatable="false">BettingTipActivity</string>
  <string name="hint_league_title">League</string>
  <string name="hint_league">Ex. England - Premier League </string>
  <string name="hint_betting_tip_heading" translatable="false">Betting Tip</string>
  <string name="hint_betting_tip" translatable="false">Ex. x2</string>
  <string name="hint_game_time_heading">Game time</string>
  <string name="hint_game_time" translatable="false">Ex. 17/05/2021 15:22</string>
  <string name="title_sport_heading">Sport</string>
  <string name="title_sport" translatable="false">Football</string>
  <string name="title_status_heading">Status</string>
  <string name="title_status">Unknown</string>
  <string name="action_logout">Logout</string>
  <string name="action_settings">Settings</string>
  <string name="team_home">Home Team</string>
  <string name="team_away">Away Team</string>
  <string name="team_home_hint">ex. Manchester United</string>
  <string name="team_away_hint">ex. Chelsea</string>
  <string name="title_activity_ticket">TicketActivity</string>
  <string name="result">Result</string>
  <string name="result_hint">2-1</string>
  <string name="error_league_name">Please provide a league name</string>
  <string name="error_home_team">Please provide home team</string>
  <string name="error_betting_tip">Please provide betting tip</string>
  <string name="error_odds">Please provide odds</string>
  <string name="error_game_time">Please provide game time</string>
  <string name="delete_tip_title">Delete tip?</string>
  <string-array name="types">
    <item>Older</item>
    <item>Upcoming</item>
  </string-array>
  <string-array name="sports">
    <item>Football</item>
    <item>Basketball</item>
    <item>Tennis</item>
    <item>Handball</item>
    <item>Volleyball</item>
  </string-array>
  <string-array name="statuses">
    <item>Won</item>
    <item>Lost</item>
    <item>Unknown</item>
  </string-array>
</resources>