<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c)  2021 Damjan Miloshevski
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tip_layout">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:inputTitle="@string/hint_league_title"
            app:hint="@string/hint_league"
            app:type="input"
            android:id="@+id/tv_league"/>

        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_league"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:inputTitle="@string/team_home"
            app:hint="@string/team_home_hint"
            app:type="input"
            android:id="@+id/tv_home"/>
        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:inputTitle="@string/team_away"
            app:hint="@string/team_away_hint"
            app:type="input"
            android:id="@+id/tv_away"/>
        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_away"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:hint="@string/hint_betting_tip"
            app:inputTitle="@string/hint_betting_tip_heading"
            app:type="input"
            android:id="@+id/tv_betting_tip"/>
        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_betting_tip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:hint="@string/result_hint"
            app:inputTitle="@string/result_title"
            app:type="input"
            android:id="@+id/tv_result"/>
        <com.twoplaytech.drbetting.admin.views.InputView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:inputTitle="@string/hint_game_time_heading"
            app:hint="@string/hint_game_time"
            app:type="datepicker"
            android:id="@+id/tv_game_time"/>
        <com.twoplaytech.drbetting.admin.views.ChooserView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:chooserTitle="@string/title_sport_heading"
            app:chooserType="sport"
            app:items="@array/sports"
            android:id="@+id/cv_sports"/>
        <com.twoplaytech.drbetting.admin.views.ChooserView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_sports"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:chooserTitle="@string/title_status_heading"
            app:chooserType="status"
            app:items="@array/statuses"
            android:id="@+id/cv_status"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
